Fix the constant used to detect text/plain string types.

In ui/base/Clipboard kMimeTypeText = "text/plain"
In platform/clipboard/ClipboardMimeTypes kMimeTypeText = "text"

When I onion souped the code I did not realize that these two
constants with the same name had different values.

The fix is to use platform/clipboard/ClipboardMimeTypes
kMimeTypeTextPlain so we have the same value on both sides.

A future cleanup might be to amalgamate these constants.

Bug: 794517
Change-Id: I9631430bc6c232afc38f12dcfad6b78f683add0b
Reviewed-on: https://chromium-review.googlesource.com/828320
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524324}
Former-commit-id: 8c25dd7618547a97dbf75460eecbb36fa48c0d9f